@@ -51,6 +51,9 @@ public class Repository implements Serializable {
 
     /** The structure. */
     private RepositoryStructure structure;
+    
+    /** Attribute to indicate if repository needs to be written to disk */
+    private transient boolean dirty;
 
     /**
      * Instantiates a new repository.
@@ -177,5 +180,19 @@ public class Repository implements Serializable {
     public boolean exists() {
         return getFolders().get(0).exists();
     }
+
+	/**
+	 * @return the dirty
+	 */
+	protected boolean isDirty() {
+		return dirty;
+	}
+
+	/**
+	 * @param dirty the dirty to set
+	 */
+	protected void setDirty(boolean dirty) {
+		this.dirty = dirty;
+	}
 
 }
