@@ -30,6 +30,7 @@
 - INTERNAL: Update search indexes only if user is going to perform a search
 - INTERNAL: Don't update navigation table if it's not visible
 - INTERNAL: Statistics refactoring [2875945]
+- INTERNAL: Write repository to disk when closing application only if repository has been modified or refreshed
 - FIX: Deleting many files from device freezes aTunes gui for some seconds [2855962]
 - FIX: LyricWiki engine returned lyrics with URLs
 - FIX: Opening web browser does not work on Ubuntu
